--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -27,6 +27,7 @@ update-github:
   stage: update_github
   only:
     - master
+  needs: [build]
   script:
     - ssh git@github.com || true
     - git remote remove origin && git remote add origin $GITHUB_URL
@@ -39,7 +40,7 @@ update-gitops:
   stage: update_gitops
   only:
     - master
-  needs: [test]
+  needs: [build]
   script:
     - git clone $GITOPS_URL 
     - cd GitOps
