--- a/TestMaker.Administrator/appsettings.json
+++ b/TestMaker.Administrator/appsettings.json
@@ -16,7 +16,7 @@
     {
       "Scheme": "http",
       "Prefix": "/api/Event",
-      "Host": "test-service",
+      "Host": "event-service",
       "Port": 80
     }
   ]
