--- a/TestMaker.Administrator/appsettings.Development.json
+++ b/TestMaker.Administrator/appsettings.Development.json
@@ -17,6 +17,12 @@
       "Prefix": "/api/Event",
       "Host": "localhost",
       "Port": 50000
+    },
+    {
+      "Scheme": "http",
+      "Prefix": "/api/User",
+      "Host": "localhost",
+      "Port": 60000
     }
   ]
 }
