--- a/TestMaker.Administrator/appsettings.json
+++ b/TestMaker.Administrator/appsettings.json
@@ -18,6 +18,12 @@
       "Prefix": "/api/Event",
       "Host": "event-service",
       "Port": 80
+    },
+    {
+      "Scheme": "http",
+      "Prefix": "/api/User",
+      "Host": "user-service",
+      "Port": 80
     }
   ]
 }
