--- a/TestMaker.Administrator/appsettings.Development.json
+++ b/TestMaker.Administrator/appsettings.Development.json
@@ -23,6 +23,12 @@
       "Prefix": "/api/User",
       "Host": "localhost",
       "Port": 60000
+    },
+    {
+      "Scheme": "http",
+      "Prefix": "connect/token",
+      "Host": "localhost",
+      "Port": 60001
     }
   ]
 }
