--- a/TestMaker.Administrator/appsettings.json
+++ b/TestMaker.Administrator/appsettings.json
@@ -24,6 +24,12 @@
       "Prefix": "/api/User",
       "Host": "user-service",
       "Port": 80
+    },
+    {
+      "Scheme": "http",
+      "Prefix": "connect/token",
+      "Host": "identity-server",
+      "Port": 80
     }
   ]
 }
