--- a/TestMaker.Administrator/appsettings.json
+++ b/TestMaker.Administrator/appsettings.json
@@ -27,7 +27,7 @@
     },
     {
       "Scheme": "http",
-      "Prefix": "connect/token",
+      "Prefix": "/connect/token",
       "Host": "identity-server",
       "Port": 80
     }
