--- a/TestMaker.Administrator/appsettings.Development.json
+++ b/TestMaker.Administrator/appsettings.Development.json
@@ -26,7 +26,7 @@
     },
     {
       "Scheme": "http",
-      "Prefix": "connect/token",
+      "Prefix": "/connect/token",
       "Host": "localhost",
       "Port": 60001
     }
